# doubletapp

./: .gitignore  README.md  idaes.md  init.sh  package-lock.json  package.json  tailwind.config.js  todo.md  vite.config.ts
backend/: Cargo.toml  init.sql  solution.md  todo.md
backend/migrations/: 20250218122158_init_db.sql  20250218130613_meowed.sql
backend/src/: error.rs  game.rs  main.rs  misc.rs  models.rs
notes/: bibliography.yml  md.md  nea.typ
notes/assets/: catppuccin-mocha.tmTheme
pkg/: package.json  xoshiro_wasm.d.ts  xoshiro_wasm.js  xoshiro_wasm_bg.js  xoshiro_wasm_bg.wasm  xoshiro_wasm_bg.wasm.d.ts
silly-rng/: Cargo.toml  README.md
silly-rng/src/: lib.rs  main.rs
src/: app.html
src/lib/: grid.svelte  key.svelte  results.svelte  settings.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/leaderboards/: +page.svelte
src/routes/signup/: +page.svelte
xoshiro-wasm/: Cargo.toml  LICENSE_MIT
xoshiro-wasm/src/: lib.rs
