[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
alea = "0.2.2"
axum = { version = "0.7.5", features = ["macros", "ws"] }
futures = "0.3.31"
rand = "0.8.5"
scc = { version = "2.1.11", features = ["serde"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.128"
silly-rng = { version = "0.1.0", path = "../silly-rng" }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.39.2", features = ["full", "time"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = { version = "1.1.3", features = ["serde"] }
